--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            preload="auto"
            controls
            autoplay
-        
+           muted
            loop
     </video>   
    </form>            
